<resources>
    <string name="app_name">ctof-android</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">This is the splashing screen\nWe are doing some initializing</string>
    <string name="home">Home</string>
    <string name="topic"><![CDATA[Q&A]]></string>
    <string name="messages">Messages</string>
    <string name="mine">Profile</string>
    <string name="ask">Topic</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_full">Sign Up for HiCTO</string>
    <string name="missing_email">email cannot be empty</string>
    <string name="missing_password">password cannot be empty</string>
    <string name="personal_homepage">Personal Homepage</string>
    <string name="current_cto_coins">CTO Coins</string>
    <string name="current_reputation">Reputation</string>
    <string name="review_count">Startup Reviews</string>
    <string name="invalid_user">Invalid User</string>
    <string name="replied_topic">Replied Topic</string>
    <string name="accepted_topic">Accepted Topic</string>
    <string name="about">About</string>
    <string name="expertise">Expertise</string>
    <string name="my_profile">My Profile</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="exit_confirm">Are you sure to exit?</string>
    <string name="invite">Invite</string>
    <string name="modify_profile">Modify Profile</string>
    <string name="modify_push_settings">Modify Push Settings</string>
    <string name="modify_password">Modify Password</string>
    <string name="about_hicto">About HiCTO</string>
    <string name="logout">logout</string>
    <string name="confirm">Confirm</string>
    <string name="logout_confirm">Are you sure to logout?</string>
    <string name="wait_tips">Please Wait</string>
    <string name="introduction">Introduction</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="expert_signup">Expert Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="missing_name">name cannot be empty</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="password_not_same">two passwords entered are not the same</string>
    <string name="invalid_password_length">password length must be not be less than 6</string>
    <string name="missing_invitation_code">invitation code cannot be empty</string>
    <string name="sign_up_succeed">Sign Up Succeed</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="invite_expert_email_hint">Please Input Expert\'s Email</string>
    <string name="email_sent">Email has been sent</string>
    <string name="notify_immediately">Notify me immediately</string>
    <string name="notify_on_freetime">Notify me only in freetime</string>
    <string name="notify_by_push">Notify by push</string>
    <string name="notify_by_email">Notify by email</string>
    <string name="setting_updated">Settings have been updated</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="submit">Submit</string>
    <string name="set_expert_cover">Set personal image</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="uploading">Please wait while uploading</string>
    <string name="upload_retry">Upload failed, please retry</string>
    <string name="set_avatar">Set avatar</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="location">Location</string>
    <string name="input_old_password">Please input old password</string>
    <string name="input_new_password">Please input new password</string>
    <string name="input_new_password_again">Please input new password again</string>
    <string name="not_login">You have not logged in</string>
    <string name="topic_detail">Topic Detail</string>
    <string name="fail_to_get_topic_detail">Failed to get topic detail</string>
    <string name="answer_question">Answer</string>
    <string name="comment_count">%d comments</string>
    <string name="ago"> ago</string>
    <string name="expert_replies">Replies(%d)</string>
    <string name="loading">Loading...</string>
    <string name="error">Error!!!</string>
    <string name="see_more_comments">See %d more comments</string>
    <string name="resolved_comment">Resolved Comment</string>
</resources>
