<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/home"
        android:background="#FFFFFFFF"
        android:textColor="@drawable/text_tab_button"
        android:text="@string/home"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFFFFFF"
        android:drawableTop="@drawable/topic"
        android:text="@string/topic"
        android:textColor="@drawable/text_tab_button"
        android:id="@+id/topic" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:layout_weight="1"
        android:drawableTop="@drawable/ask"
        android:text="@string/ask"
        android:id="@+id/ask" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:layout_weight="1"
        android:drawableTop="@drawable/messages"
        android:text="@string/messages"
        android:textColor="@drawable/text_tab_button"
        android:id="@+id/messages" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:layout_weight="1"
        android:drawableTop="@drawable/profile"
        android:text="@string/mine"
        android:textColor="@drawable/text_tab_button"
        android:id="@+id/profile" />
</LinearLayout>