<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"></include>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginBottom="8dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password"
        android:layout_marginBottom="80dp"
        android:text="@string/forgot_password"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/grey_label" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="@dimen/title_bar_horizontal_margin"
        android:layout_marginRight="@dimen/title_bar_horizontal_margin"
        android:background="@drawable/selector_bg_button"
        android:text="@string/login"
        android:textColor="@drawable/selector_fg_button"
        android:textSize="@dimen/text_size_button" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_bg_rectangle"
        android:padding="@dimen/padding_normal"
        android:text="@string/sign_up_full"
        android:textColor="@color/theme_blue"
        android:textSize="@dimen/text_size_title_bar" />


</RelativeLayout>