<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@android:color/white"
    android:baselineAligned="false"
    android:orientation="horizontal">


    <Button
        android:id="@+id/home"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:drawableTop="@drawable/selector_home_icon"
        android:text="@string/home"
        android:textColor="@drawable/selector_fg_tab_button"
        android:textSize="@dimen/text_size_tab_item" />

    <Button
        android:id="@+id/topic"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:drawableTop="@drawable/selector_topic_icon"
        android:text="@string/topic"
        android:textColor="@drawable/selector_fg_tab_button"
        android:textSize="@dimen/text_size_tab_item" />

    <Button
        android:id="@+id/place_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:visibility="invisible" />

    <Button
        android:id="@+id/messages"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:drawableTop="@drawable/selector_messages_icon"
        android:text="@string/messages"
        android:textColor="@drawable/selector_fg_tab_button"
        android:textSize="@dimen/text_size_tab_item" />

    <Button
        android:id="@+id/profile"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:drawableTop="@drawable/selector_profile_icon"
        android:text="@string/mine"
        android:textColor="@drawable/selector_fg_tab_button"
        android:textSize="@dimen/text_size_tab_item" />


</LinearLayout>