<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fragment_container">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="@dimen/inner_component_margin"
        android:layout_marginRight="@dimen/inner_component_margin"
        android:layout_marginTop="@dimen/inner_component_margin"
        android:hint="@string/input_old_password"
        android:inputType="textPassword"
        android:textColor="@color/black_label"
        android:textSize="@dimen/text_size_extra_large" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="@dimen/inner_component_margin"
        android:layout_marginRight="@dimen/inner_component_margin"
        android:layout_marginTop="@dimen/inner_component_margin"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:textColor="@color/black_label"
        android:textSize="@dimen/text_size_extra_large" />

    <EditText
        android:id="@+id/new_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password"
        android:layout_marginLeft="@dimen/inner_component_margin"
        android:layout_marginRight="@dimen/inner_component_margin"
        android:layout_marginTop="@dimen/inner_component_margin"
        android:hint="@string/input_new_password_again"
        android:inputType="textPassword"
        android:textColor="@color/black_label"
        android:textSize="@dimen/text_size_extra_large" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="@dimen/title_bar_horizontal_margin"
        android:layout_marginRight="@dimen/title_bar_horizontal_margin"
        android:background="@drawable/selector_bg_button"
        android:text="@string/submit"
        android:textColor="@drawable/selector_fg_button"
        android:textSize="@dimen/text_size_button" />



</RelativeLayout>