<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fragment_container"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        layout="@layout/layout_expert_basic_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <include
        layout="@layout/layout_expert_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"></include>

    <RelativeLayout
        android:id="@+id/replied_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_component_margin"
        android:background="@android:color/white"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/replied_topic"
            android:textColor="@color/black_label"
            android:textSize="@dimen/text_size_medium" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right" />

        <TextView
            android:id="@+id/replied_topic_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/inner_component_margin"
            android:layout_toLeftOf="@id/arrow"
            android:textColor="@color/dark_grey_label"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/accepted_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/accepted_topic"
            android:textColor="@color/black_label"
            android:textSize="@dimen/text_size_medium" />

        <ImageView
            android:id="@+id/arrow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right" />

        <TextView
            android:id="@+id/accepted_topic_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/inner_component_margin"
            android:layout_toLeftOf="@id/arrow2"
            android:textColor="@color/dark_grey_label"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/inner_component_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/dark_grey_label"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey_label"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>


    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/inner_component_margin"
        android:textColor="@color/dark_grey_label"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="@dimen/inner_component_margin"
        android:text="@string/expertise"
        android:textColor="@color/dark_grey_label"
        android:textSize="@dimen/text_size_small" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/expertise_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/inner_component_margin">

        </LinearLayout>
    </HorizontalScrollView>


</LinearLayout>